<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient"
    tools:context=".MainActivity">

    <ImageView
        android:layout_margin="10dp"
        android:id="@+id/company_logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/company_logo"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_up"
        android:textStyle="bold"
        android:layout_below="@+id/company_logo"
        android:textSize="24sp"
        android:textColor="@android:color/white"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:layout_margin="10dp"
        android:id="@+id/first_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/sign_up"
        android:hint="@string/enter_name"
        android:textColorHint="@android:color/white"
        android:inputType="textCapSentences"
        android:drawableStart="@drawable/ic_account_box_white"
        android:drawableLeft="@drawable/ic_account_box_white"/>


    <EditText
        android:layout_margin="10dp"
        android:id="@+id/email_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/first_name"
        android:hint="@string/enter_email_address"
        android:textColorHint="@android:color/white"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/ic_baseline_email"
        android:drawableLeft="@drawable/ic_baseline_email" />

    <EditText
        android:layout_margin="10dp"
        android:id="@+id/birthday"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_address"
        android:hint="@string/enter_date_of_birth"
        android:textColorHint="@android:color/white"
        android:ems="10"
        android:drawableStart="@drawable/ic_baseline_calendar"
        android:drawableLeft="@drawable/ic_baseline_calendar"/>

    <EditText
        android:layout_margin="10dp"
        android:id="@+id/phone_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/birthday"
        android:hint="@string/enter_phone_number"
        android:inputType="phone"
        android:ems="10"
        android:textColorHint="@android:color/white"
        android:drawableStart="@drawable/ic_baseline_phone"
        android:drawableLeft="@drawable/ic_baseline_phone"/>



    <EditText
        android:layout_margin="10dp"
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:layout_below="@id/phone_number"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white"
        android:ems="10"
        android:drawableStart="@drawable/ic_password"
        android:drawableLeft="@drawable/ic_password"/>


    <EditText

        android:id="@+id/confirm_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/phone_number"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginTop="75dp"
        android:layout_marginEnd="193dp"
        android:layout_marginRight="193dp"
        android:drawableStart="@drawable/ic_password"
        android:drawableLeft="@drawable/ic_password"
        android:ems="10"
        android:hint="@string/confirm_password"
        android:inputType="textPassword"
        android:textColor="@android:color/white"
        android:textColorHint="@android:color/white" />

    <Button
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/confirm_password"
        android:layout_marginTop="50dp"
        android:text="@string/create_account"
        android:textAllCaps="false"
        android:textColor="@color/teal_700"
        android:backgroundTint="#FFFF00"
        android:layout_centerHorizontal="true"
        android:onClick="createAccount"/>


</RelativeLayout>